--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch: # 允许手动点按钮触发
+  workflow_dispatch:
 
 jobs:
   build:
@@ -12,34 +12,25 @@ jobs:
     name: Build Project
 
     steps:
-      # 1. 检出代码
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. 配置 Node.js 环境 (根据 package.json 建议使用 v18+)
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
 
-      # 3. 安装依赖
       - name: Install dependencies
-        run: npm ci
+        # 修复：使用 npm install 代替 npm ci，以允许在无 lock 文件时构建
+        run: npm install
 
-      # 4. 执行构建
-      # 根据 package.json，这将运行 esbuild 并将 _worker.js 生成到 public/ 目录
       - name: Build project
         run: npm run build
 
-      # 5. 验证构建结果 (可选，在日志中显示 public 目录结构)
-      - name: Verify build output
-        run: ls -R public
-
-      # 6. 将构建好的 public 目录打包上传供下载
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: dist-public  # 下载时的压缩包名称
-          path: public/      # 要保存的目录
-          retention-days: 7  # 文件保留天数
+          name: dist-public
+          path: public/
+          retention-days: 7
